fix alignment

--- a/src/block/icon-list-item/style.scss
+++ b/src/block/icon-list-item/style.scss
@@ -1,5 +1,10 @@
 
 .stk-block-icon-list.stk-block {
+	.wp-block-stackable-icon-list-item,
+	.stk-block-icon-list-item {
+		margin-bottom: 0;
+	}
+
 	.wp-block-stackable-icon-list-item:not(:last-child)::after {
 		content: "" !important;
 		display: block;
@@ -60,7 +65,7 @@
 	outline: none;
 }
 
-.stk-block-icon-list .stk-block-icon-list__ol li.stk-block-icon-list-item {
+.stk-block-icon-list .stk-block-icon-list__ol .stk-block-icon-list-item {
 	width: 100%;
 	margin-inline: 0 auto;
 	counter-increment: stk-icon-list-counter;
@@ -78,12 +83,7 @@
 			color: var(--stk-icon-list-marker-color);
 			transform: rotate(var(--stk-icon-list-icon-rotation, 0deg));
 			opacity: var(--stk-icon-list-icon-opacity, 1);
-			vertical-align: middle;
 		}
 	}
 
-}
-
-li.wp-block-stackable-icon-list-item.stk-block-icon-list-item {
-	margin-bottom: 0;
 }
