--- a/src/block/icon-list/style.scss
+++ b/src/block/icon-list/style.scss
@@ -1,6 +1,6 @@
 // Important, we can't use flex since it causes issues with columns.
 .stk-block-icon-list {
-	.stk-block-icon-list--grid:is(ul, ol) {
+	.stk-block-icon-list--grid:is(.stk-block-icon-list__ul, .stk-block-icon-list__ol) {
 		display: grid;
 		grid-template-columns: repeat(var(--stk-icon-list-column-count, 1), 1fr);
 		row-gap: var(--stk-icon-list-row-gap, 0);
@@ -8,7 +8,7 @@
 		width: fit-content;
 		text-align: start;
 	}
-	.stk-block-icon-list--column:is(ul, ol) {
+	.stk-block-icon-list--column:is(.stk-block-icon-list__ul, .stk-block-icon-list__ol) {
 		display: block;
 		column-count: var(--stk-icon-list-column-count, 1);
 		column-gap: var(--stk-icon-list-column-gap, 16px);
@@ -17,28 +17,29 @@
 		.wp-block-stackable-icon-list-item {
 			margin-bottom: var(--stk-icon-list-row-gap, 0);
 		}
-		.wp-block-stackable-icon-list-item:last-child {
-			margin-bottom: 0;
-		}
 	}
-	:is(ul.stk-block-icon-list__ul, ol.stk-block-icon-list__ol) {
+	:is(.stk-block-icon-list__ul, .stk-block-icon-list__ol) {
 		flex: none;
-	}
-	ol {
-		list-style-image: none;
-	}
-
-	ul.stk-block-icon-list__ul {
-		list-style-type: none;
-	}
-	ul.stk-block-icon-list__ul,
-	ol.stk-block-icon-list__ol {
 		padding-inline-start: 0;
 	}
 
-	ol.stk-block-icon-list__ol {
+	.stk-block-icon-list__ul {
+		list-style-type: none;
+	}
+
+	.stk-block-icon-list__ol {
 		counter-reset: stk-icon-list-counter;
 		list-style-type: none;
+	}
+
+	.stk-block-icon-list__group {
+		width: fit-content;
+	}
+
+	// For previous icon list blocks.
+	:is(ul,ol) {
+		width: fit-content;
+		text-align: start;
 	}
 
 	// @from https://css-tricks.com/almanac/properties/b/break-inside/
@@ -46,8 +47,10 @@
 		page-break-inside: avoid; /* Firefox */
 		break-inside: avoid;
 	}
+	ol {
+		list-style-image: none;
+	}
 
-	// For previous icon list blocks.
 	&.stk-block :is(ul:not(.stk-block-icon-list__ul)),
 	&.stk-block :is(ol:not(.stk-block-icon-list__ol)) {
 		padding-inline-start: 1em;
@@ -55,7 +58,7 @@
 	// For previous icon list blocks.
 	// Need to make this fit the content so that we can align left/center/right
 	// the list alignment.
-	:not(ul.stk-block-icon-list__li, ol.stk-block-icon-list__ol) li:not(.stk-block-icon-list-item) {
+	:not(ul.stk-block-icon-list__ul, ol.stk-block-icon-list__ol) li:not(.stk-block-icon-list-item) {
 		width: fit-content;
 		&::marker {
 			line-height: 0;
@@ -64,17 +67,20 @@
 }
 
 // Alignments when the icon list is aligned.
-.stk-block-icon-list.stk-block :is(ul, ol) {
+.stk-block-icon-list.stk-block :is(ul, ol),
+.stk-block-icon-list.stk-block :is(.stk-block-icon-list__ul, .stk-block-icon-list__ol) {
 	margin-left: var(--stk-alignment-margin-left);
 	margin-right: var(--stk-alignment-margin-right);
 }
 
 // Prevents theme's css from affecting the icon list.
-.stk-block-icon-list.stk-block :is(ul, ol) {
+.stk-block-icon-list.stk-block :is(ul, ol),
+.stk-block-icon-list.stk-block :is(.stk-block-icon-list__ul, .stk-block-icon-list__ol) {
 	margin-top: 0;
 	margin-bottom: 0;
 
-	li:last-child {
+	li:last-child,
+	.wp-block-stackable-icon-list-item:last-child {
 		margin-bottom: 0;
 	}
 }
